Moved Bubbler One local so it would render correctly on Windows Chrome
Reference: http://stackoverflow.com/questions/24170484/google-font-is-clipped-in-chrome

--- a/themes/css/style.css
+++ b/themes/css/style.css
@@ -1,5 +1,17 @@
+/* Generated by Font Squirrel (http://www.fontsquirrel.com) on July 30, 2014 */
+@font-face {
+    font-family: 'Bubbler One';
+    src: url('bubblerone-regular-webfont.eot');
+    src: url('bubblerone-regular-webfont.eot?#iefix') format('embedded-opentype'),
+         url('bubblerone-regular-webfont.woff') format('woff'),
+         url('bubblerone-regular-webfont.ttf') format('truetype'),
+         url('bubblerone-regular-webfont.svg#bubbler_oneregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
 
+}
 
+/* Colorful Flat */
 body{ background:#a5d2da; padding:0; color: #454545;
       font-family: 'Bubbler One', sans-serif;
 }
